# k2tree

./: .gitignore  CMakeLists.txt
K2Tree/: .gitignore  CMakeLists.txt  README.md  tags
K2Tree/_build/: CMakeCache.txt  Makefile  build.sh  clean.sh  cmake_install.cmake  compile_commands.json  test_compile.sh
K2Tree/_build/gtest/: Makefile  cmake_install.cmake
K2Tree/_build/src/: Makefile  cmake_install.cmake
K2Tree/_build/tests/: CTestTestfile.cmake  Makefile  cmake_install.cmake  test_bfs  test_bit_vector  test_build_from_edge_array  test_check_link  test_dacs  test_get_child  test_k2tree  test_k2tree_compressed  test_merge_level  test_rank  test_read_compressed_tree  test_read_tree  test_sdsl_k2tree  test_tree_partition  test_vector_bool  tests_utils
K2Tree/_build/tools/: Makefile  cmake_install.cmake  csv2csr  csv_convertor  csv_partition  read_bin
K2Tree/cmake/: gtest.cmake
K2Tree/dacs/: CMakeLists.txt
K2Tree/dacs/include/: dacs.h
K2Tree/dacs/lib/: CMakeCache.txt  Makefile  cmake_install.cmake  dacs_test  tmp  tmp.cc
K2Tree/include/: base.h  build_tree.h  k2tree.h  k2tree_compressed.h  k2tree_morton.h  k2tree_partition.h
K2Tree/include/compression/: compressor.h  hash.h  vocabulary.h
K2Tree/include/utils/: bit_vector.h  file.h  sort.h  time.h  utils.h
K2Tree/libsdsl/include/: Makefile
K2Tree/libsdsl/include/sdsl/: Makefile
K2Tree/libsdsl/lib/: Makefile
K2Tree/libsdsl/lib/pkgconfig/: libdivsufsort.pc  libdivsufsort64.pc  sdsl-lite.pc
K2Tree/sdsl/include/: cmake_install.cmake
K2Tree/sdsl/lib/: cmake_install.cmake
K2Tree/src/: CMakeLists.txt  k2tree.cc  k2tree_compressed.cc  k2tree_partition.cc
K2Tree/src/compression/: hash.cc  vocabulary.cc
K2Tree/src/utils/: bit_vector.cc  file.cc  time.cc  utils.cc
K2Tree/tests/: CMakeLists.txt  test_bfs.cc  test_bit_vector.cc  test_build_from_edge_array.cc  test_check_link.cc  test_dacs.cc  test_get_child.cc  test_k2tree_compressed.cc  test_main.cc  test_merge_level.cc  test_morton.cc  test_rank.cc  test_read_compressed_tree.cc  test_read_tree.cc  test_sdsl_k2tree.cc  test_tree_partition.cc  test_vector_bool.cc  tests_utils.h
K2Tree/tools/: CMakeLists.txt  config.h  csv2csr.cc  csv_convertor.cc  csv_partition.cc  read_bin.cc
cmake/: gtest.cmake
include/: base.h  bit_array.h  k2tree.h
libk2tree/: CMakeLists.txt
libk2tree/_build/: CMakeCache.txt  Makefile  cmake_install.cmake
libk2tree/_build/dacs/: Makefile  cmake_install.cmake
libk2tree/_build/gtest/: Makefile  cmake_install.cmake
libk2tree/_build/src/: Makefile  cmake_install.cmake
libk2tree/_build/tests/: CTestTestfile.cmake  Makefile  cmake_install.cmake
libk2tree/cmake/Modules/: Findlibgd.cmake  gtest.cmake
libk2tree/include/builder/: k2tree_partition_builder.h
libk2tree/src/libk2tree/builder/: k2tree_partition_builder.cc
libk2tree/tests/: CMakeLists.txt  build_tree.h  queries.cc  test_build_tree.cc  test_compressed_hybrid.cc  test_compressed_partition.cc  test_enron_dataset.cc  test_enron_partition.cc  test_k2tree.cc  test_k2treepartition.cc  test_read_tree.cc  test_twitter_dataset.cc  test_twitter_partition.cc
src/: CMakeLists.txt  bit_array.cc  k2tree.cc
tests/: CMakeLists.txt  test_bit_array.cc  test_enron.cc  test_naive_k2tree.cc  test_twitter.cc
